--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-APP_KEY = 'a202fba63a209863ab62'
-APP_SECRET = '9bd420a4d58938581962';
-APP_ID = '460129';
+# REMEMBER TO GET YOUR KEYS IN PUSHER.com - the account is free!
+
+APP_KEY = 'a202fb'
+APP_SECRET = '9bd4';
+APP_ID = '460';
